# macros

./: Cargo.toml  cliff.toml
examples/: auto_debug.rs  auto_deref.rs  enum_macro.rs  my_ready.rs  my_try.rs  my_vec.rs
src/: auto_deref.rs  enum_from.rs  enum_from_darling.rs  lib.rs
