[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["lawff<evilllawliet@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["full"] }
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
